fix: calendar overflow

--- a/interface/themes/ajax_calendar_sass.scss
+++ b/interface/themes/ajax_calendar_sass.scss
@@ -39,17 +39,13 @@ div.tiny {
     transition: margin .25s ease-out;
 }
 
-.page-content-wrapper {
-    width: 85%;
-    margin-left: 15%;
-}
-
 #wrapper.toggled .sidebar-wrapper {
     margin-left: 0;
+    top: 68px;
 }
 
 #wrapper.toggled .page-content-wrapper {
-    margin-left: 0%;
+    margin-left: 8.75rem;
 }
 
 #functions {
@@ -154,7 +150,7 @@ div.tiny {
 
 #bottomLeft {
     width: 15%;
-    min-width: 8.75rem;
+    min-width: 130px;
     position: fixed;
     top: 45px;
     float: left;
@@ -528,12 +524,18 @@ div.tiny {
     }
 
     #wrapper.toggled .page-content-wrapper {
-        width: 85%;
-        margin-left: 15%;
+        width: calc(100% - 150px);
+        margin-left: 130px;
     }
 }
 
-@media (min-width: 768px) {
+@media(max-width: 665px) {
+    #bigCal > table {
+        margin-top: 68px;
+    }
+}
+
+@media (min-width: 860px) {
     .sidebar-wrapper {
         margin-left: 0;
     }
